REGRESSION (r269244?): ASSERTION FAILED: m_idHashSalt.isEmpty() || m_idHashSalt == salt in WebCore::Document::setDeviceIDHashSalt https://bugs.webkit.org/show_bug.cgi?id=218458 <rdar://problem/70963733>

Reviewed by Eric Carlson.

Remove no longer needed code.

* Modules/mediastream/UserMediaRequest.cpp:
(WebCore::UserMediaRequest::allow):
* dom/Document.cpp:
* dom/Document.h:
(WebCore::Document::hasHadCaptureMediaStreamTrack const):


Canonical link: https://commits.webkit.org/231146@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@269295 268f45cc-cd09-0410-ab3c-d52691b4dbfc